Added test cases for defaultValue in scoring